--- a/index.html
+++ b/index.html
@@ -439,8 +439,35 @@
 
                 <!-- List View -->
                 <div id="list-view" class="list-view active">
-                    <div id="tasks-container" class="tasks-container">
-                        <!-- Tasks will be rendered here -->
+                    <!-- Pending Tasks Section -->
+                    <div id="pending-section" class="tasks-section">
+                        <div id="tasks-container" class="tasks-container">
+                            <!-- Pending tasks will be rendered here -->
+                        </div>
+                    </div>
+
+                    <!-- Completed Tasks Section -->
+                    <div id="completed-section" class="tasks-section completed-section">
+                        <div class="section-header" id="completed-header">
+                            <h3>
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
+                                    <path d="M9 11l3 3L22 4" />
+                                    <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11" />
+                                </svg>
+                                Completed
+                                <span id="completed-count" class="section-count">0</span>
+                            </h3>
+                            <button id="toggle-completed" class="btn-icon-sm" title="Toggle completed tasks">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
+                                    <polyline points="6,9 12,15 18,9" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div id="completed-container" class="tasks-container">
+                            <!-- Completed tasks will be rendered here -->
+                        </div>
                     </div>
 
                     <!-- Empty State -->
