feat: refine Day Planner UI and implement Focus Mode with active task highlighting

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
                 <!-- Theme Toggle -->
                 <div class="theme-controls">
+                    <!-- Focus Mode removed from here -->
                     <button id="theme-toggle" class="btn-icon" title="Toggle theme (T)">
                         <svg class="icon-sun" width="20" height="20" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2">
@@ -144,6 +145,22 @@
                         <svg class="icon-moon" width="20" height="20" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2">
                             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
+                        </svg>
+                    </button>
+
+                    <!-- Planner Toggle -->
+                    <button id="planner-toggle" class="btn-icon" title="Day Planner (P)">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                            <line x1="16" y1="2" x2="16" y2="6"></line>
+                            <line x1="8" y1="2" x2="8" y2="6"></line>
+                            <line x1="3" y1="10" x2="21" y2="10"></line>
+                            <path d="M12 14h.01"></path>
+                            <path d="M16 14h.01"></path>
+                            <path d="M8 14h.01"></path>
+                            <path d="M12 18h.01"></path>
+                            <path d="M8 18h.01"></path>
                         </svg>
                     </button>
 
@@ -552,6 +569,91 @@
         </main>
     </div>
 
+    <!-- Planner View -->
+    <div id="planner-view" class="view">
+        <header class="dashboard-header">
+            <div class="header-left">
+                <button id="back-to-dashboard" class="btn-icon">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="19" y1="12" x2="5" y2="12"></line>
+                        <polyline points="12 19 5 12 12 5"></polyline>
+                    </svg>
+                </button>
+                <h1>Day Planner</h1>
+            </div>
+
+            <div class="header-right">
+                <span id="planner-date" class="date-display">Today</span>
+                <div class="planner-controls"
+                    style="display: flex; gap: 8px; align-items: center; margin-left: 16px; padding-left: 16px; border-left: 1px solid var(--border-color);">
+                    <button id="focus-mode-btn" class="btn-icon" title="Toggle Focus Mode">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <circle cx="12" cy="12" r="3"></circle>
+                        </svg>
+                    </button>
+                    <!-- Additional planner-specific controls can go here -->
+                </div>
+            </div>
+        </header>
+
+        <main class="planner-main">
+            <!-- Sidebar: Unscheduled Tasks -->
+            <div class="planner-sidebar">
+                <div class="sidebar-header">
+                    <h3>Unscheduled</h3>
+                    <div class="sidebar-actions">
+                        <button id="planner-auto-schedule-btn" class="btn-icon" title="Auto-Schedule Tasks">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path
+                                    d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" />
+                                <path d="M12 2L12 22" style="opacity: 0" />
+                                <!-- Dummy for cleaner diff if needed, but star is better -->
+                                <!-- Let's use actual Sparkles -->
+                                <path
+                                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z" />
+                                <path d="M20 3v4" />
+                                <path d="M22 5h-4" />
+                            </svg>
+                        </button>
+                        <span class="count-badge" id="unscheduled-count">0</span>
+                        <button id="planner-add-task-btn" class="btn-icon-sm" title="Add Task">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <line x1="12" y1="5" x2="12" y2="19"></line>
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <p class="sidebar-hint">Drag tasks to the timeline</p>
+                <div id="unscheduled-tasks" class="unscheduled-tasks">
+                    <!-- Tasks will be populated here -->
+                </div>
+
+                <div class="sidebar-section-header" style="margin-top: 24px; color: var(--text-secondary);">
+                    <h3>Completed (<span id="planner-completed-count">0</span>)</h3>
+                </div>
+                <div id="planner-completed-tasks" class="unscheduled-tasks completed-list">
+                    <!-- Completed tasks populated here -->
+                </div>
+            </div>
+
+            <!-- Timeline: Scheduled Tasks -->
+            <div class="planner-timeline-container">
+                <div class="timeline-header">
+                    <div class="time-header-spacer"></div>
+                    <div class="time-header-label">Schedule</div>
+                </div>
+                <div id="planner-timeline" class="timeline-grid">
+                    <!-- Time slots and tasks will be rendered here -->
+                </div>
+            </div>
+        </main>
+    </div>
+
     <!-- Task Modal -->
     <div id="task-modal" class="modal">
         <div class="modal-backdrop"></div>
@@ -593,6 +695,40 @@
                     <div class="form-group">
                         <label for="task-due">Due Date</label>
                         <input type="date" id="task-due">
+                    </div>
+                    <div class="form-group">
+                        <label>Color</label>
+                        <div class="color-picker" id="task-color-picker">
+                            <button type="button" class="color-option active" data-color="#6366f1"
+                                style="background-color: #6366f1;"></button>
+                            <button type="button" class="color-option" data-color="#3b82f6"
+                                style="background-color: #3b82f6;"></button>
+                            <button type="button" class="color-option" data-color="#10b981"
+                                style="background-color: #10b981;"></button>
+                            <button type="button" class="color-option" data-color="#f59e0b"
+                                style="background-color: #f59e0b;"></button>
+                            <button type="button" class="color-option" data-color="#ec4899"
+                                style="background-color: #ec4899;"></button>
+                            <button type="button" class="color-option" data-color="#ef4444"
+                                style="background-color: #ef4444;"></button>
+                            <button type="button" class="color-option" data-color="#8b5cf6"
+                                style="background-color: #8b5cf6;"></button>
+                            <button type="button" class="color-option" data-color="#06b6d4"
+                                style="background-color: #06b6d4;"></button>
+                        </div>
+                        <input type="hidden" id="task-color" value="#6366f1">
+                    </div>
+                    <div class="form-group">
+                        <label>Duration</label>
+                        <div style="display: flex; gap: 8px;">
+                            <div style="flex: 1;">
+                                <input type="number" id="task-duration-hours" placeholder="Hrs" min="0" max="23">
+                            </div>
+                            <div style="flex: 1;">
+                                <input type="number" id="task-duration-minutes" placeholder="Min" min="0" max="59"
+                                    step="5">
+                            </div>
+                        </div>
                     </div>
                 </div>
 
