feat: add local storage indicator and fix navigation glitches

--- a/index.html
+++ b/index.html
@@ -233,6 +233,18 @@
                             </svg>
                             Clear Completed
                         </button>
+                        <div class="settings-option readonly" style="cursor: default; justify-content: space-between;">
+                            <div style="display: flex; align-items: center; gap: 8px;">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
+                                    <path d="M20 12V8H6a2 2 0 0 1-2-2c0-1.1.9-2 2-2h12v4" />
+                                    <path d="M4 6v12c0 1.1.9 2 2 2h14v-4" />
+                                    <path d="M18 12a2 2 0 0 0-2 2c0 1.1.9 2 2 2h4v-4h-4z" />
+                                </svg>
+                                Storage
+                            </div>
+                            <span id="storage-usage" style="font-size: 0.85em; opacity: 0.8;">Calculating...</span>
+                        </div>
                         <div class="settings-divider"></div>
                         <button id="logout-btn" class="settings-option text-danger">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
