Fix time indicator drift, enable overlapping tasks, and add header clock

--- a/index.html
+++ b/index.html
@@ -596,6 +596,7 @@
 
             <div class="header-right">
                 <span id="planner-date" class="date-display">Today</span>
+                <div id="planner-clock" class="planner-clock"></div>
                 <div class="planner-controls"
                     style="display: flex; gap: 8px; align-items: center; margin-left: 16px; padding-left: 16px; border-left: 1px solid var(--border-color);">
                     <button id="focus-mode-btn" class="btn-icon" title="Toggle Focus Mode">
